# ScrapeyDoo

./: .gitignore  README.md  ScrapeyDoo.spec  build.py  compile.py  flake.nix  pyproject.toml  typos.toml
.github/workflows/: build.yaml  build.yml
checks/pre-commit/: default.nix
src/: __init__.py  proxies.txt  scraper.py  settings.py
src/hooks/: hook-scrapy.py
src/resources/: proxies.txt  user_agents.txt
src/spiders/: product_spider.py  results_spider.py
tests/: query.json
