[tool.poetry]
name = "ScrapeyDoo"
version = "0.1.0"
description = "Web Scraper"
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.2.1"
pandas = "^2.2.2"
tqdm = "^4.66.2"
selenium = "^4.20.0"
xvfbwrapper = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
