[tool.poetry]
name = "ScrapeyDoo"
version = "0.1.0"
description = "A webscraper for Aamzon book listings."
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scrapy = "^2.11.1"
scrapy-user-agents = "^0.1.1"
scrapy-proxies = "^0.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
