[tool.poetry]
name = "ScrapeyDoo"
version = "1.2"
description = "A webscraper for Amazon book listings."
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ElliottSullingeFarrall/ScrapeyDoo"
packages = [{ include = "src", to = "ScrapeyDoo" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scrapy = "^2.11.2"
scrapy-user-agents = "^0.1.1"
scrapy-proxies = "^0.4"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[tool.poetry.scripts]
ScrapeyDoo = "src:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
